add facebook link and blank link placeholders for the other social media accounts

--- a/index.html
+++ b/index.html
@@ -119,9 +119,15 @@
             <img src="images\logotransparent.png" alt="Accurate Manufacturing and Product Development" class="header-logo mr-3 md:mr:6 lg:mr-12">
 
             <ul class="social-icons list-none mr-3 md:mr:6 lg:mr-12 flex flex-col justify-center ">
-                <li class="social-icon-facebook w-6 mb-1" id="social-icon-facebook"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></li>
-                <li class="social-icon-instagram w-6 mb-1" id="social-icon-instagram"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></li>
-                <li class="social-icon-twitter w-6" id="social-icon-twitter"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></li>
+                <li class="social-icon-facebook w-6 mb-1" id="social-icon-facebook">
+                    <a href="https://www.facebook.com/Accurate-Manufacturing-and-Product-Development-113122117248598"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></a>
+                </li>
+                <li class="social-icon-instagram w-6 mb-1" id="social-icon-instagram">
+                    <a href="#"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
+                </li>
+                <li class="social-icon-twitter w-6" id="social-icon-twitter">
+                    <a href="#"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></a>
+                </li>
             </ul>
 
             <ul class="telephone list-none mr-3 md:mr:6 lg:mr-12 flex flex-col justify-center ">
