link homepage logo and make the body of the page responsive but not the header yet

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <!-- HTML5 -->
     <header>
         <section class="header-primary flex flex-row">
-            <img src="images\logotransparent.png" alt="Accurate Manufacturing and Product Development" class="header-logo mr-3 md:mr:6 lg:mr-12">
+            <a href="/"><img src="images\logotransparent.png" alt="Accurate Manufacturing and Product Development" class="header-logo mr-3 md:mr:6 lg:mr-12"></a>
 
             <ul class="social-icons list-none mr-3 md:mr:6 lg:mr-12 flex flex-col justify-center ">
                 <li class="social-icon-facebook w-6 mb-1" id="social-icon-facebook">
@@ -158,29 +158,43 @@
         </section>
     </header>
 
-    <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg py-3">
-        <a class="m-12" href="/" target="_blank" rel="noopener">
-            Home
-        </a>
-        <a class="m-12" href="https://shop.ampdmarine.com/pages/about-us" target="_blank" rel="noopener">
-            About Us
-        </a>
-        <a class="m-12" href="https://shop.ampdmarine.com/collections/all" target="_blank" rel="noopener">
-            Products
-        </a>
-        <a class="m-12" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
-            Contact Us
-        </a>
-        <a class="m-12" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
-            Shop
-        </a>
+    <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
+        <div class="nav-links flex sm:flex-col lg:flex-row justify-center py-3">
+            <a class="mx-12 sm:my-3" href="/" target="_blank" rel="noopener">
+                Home
+            </a>
+            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/about-us" target="_blank" rel="noopener">
+                About Us
+            </a>
+            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/collections/all" target="_blank" rel="noopener">
+                Products
+            </a>
+            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
+                Contact Us
+            </a>
+            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
+                Shop
+            </a>
+        </div>
     </nav>
 
     <div class="banner header-border w-full"></div>
 
     <main class="main-container w-full">
-        <p class="text-center max-w-lg my-12 text-2xl mx-auto">Accurate Manufacturing and Product Development is a subsidary of East Texas Truck Equipment, a family owned and operated company founded in 1976, located in Longview, TX.</p>
+        <p class="text-center max-w-lg mt-12 text-2xl mx-auto">Accurate Manufacturing and Product Development is a subsidary of East Texas Truck Equipment, a family owned and operated company founded in 1976, located in Longview, TX.</p>
     </main>
+
+    <ul class="brands md:flex md:flex-row">
+        <li class="brand brand-nitro md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/ranger-accessories"><img src="images/logo-nitro.png" alt="Nitro"></a>
+        </li>
+        <li class="brand brand-ranger md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/ranger-accessories"><img src="images/logo-ranger.png" alt="Ranger"></a>
+        </li>
+        <li class="brand brand-skeeter md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/skeeter-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+    </ul>
 
     <img class="logo-glow" src="images/logotransparent.png" alt="Accurate Manufacturing and Product Development">
 
