link up footer logo

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         </li>
     </ul>
 
-    <img class="logo-glow" src="images/logotransparent.png" alt="Accurate Manufacturing and Product Development">
+    <a href="/"><img class="logo-glow" src="images/logotransparent.png" alt="Accurate Manufacturing and Product Development"></a>
 
     <footer class="text-sm text-center">
         <p>
