finish making page responsive

--- a/index.html
+++ b/index.html
@@ -116,30 +116,30 @@
     <!-- HTML5 -->
     <header>
         <section class="header-primary flex flex-col lg:flex-row">
-            <a class="link-home mx-auto my-3" href="/">
+            <a class="link-home mx-auto" href="/">
                 <img src="images\logotransparent.png" class="header-logo" alt="Accurate Manufacturing and Product Development">
             </a>
 
-            <ul class="social-icons list-none flex flex-row justify-center mb-3">
-                <li class="social-icon-facebook w-6 mr-3" id="social-icon-facebook">
+            <ul class="social-icons list-none flex my-auto mt-3 justify-center lg:block lg:mx-3">
+                <li class="social-icon-facebook w-6 mx-3 lg:mb-1" id="social-icon-facebook">
                     <a href="https://www.facebook.com/Accurate-Manufacturing-and-Product-Development-113122117248598"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></a>
                 </li>
-                <li class="social-icon-instagram w-6 mr-3" id="social-icon-instagram">
+                <li class="social-icon-instagram w-6 mx-3 lg:mb-1" id="social-icon-instagram">
                     <a href="#"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
                 </li>
-                <li class="social-icon-twitter w-6" id="social-icon-twitter">
+                <li class="social-icon-twitter w-6 mx-3" id="social-icon-twitter">
                     <a href="#"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></a>
                 </li>
             </ul>
 
-            <ul class="telephone list-none flex flex-col justify-center text-center mb-1">
+            <ul class="telephone list-none flex flex-col justify-center text-center mt-2 mb-3 lg:my-auto lg:text-left">
                 <li class="telephone-question">Have a question?</li>
                 <li class="telephone-office"><a href="tel:+19037586171">(903) 758-6171</a></li>
                 <li class="telephone-cell"><a href="tel:+19037207404">(903) 720-7404</a></li>
             </ul>
 
             <!-- This is an search component -->
-            <form class="search-form pt-2 relative mx-auto text-gray-600 mr-0 md:mr:6 lg:mr-12 mb-3" action="https://shop.ampdmarine.com/search">
+            <form class="search-form pt-2 relative mx-auto text-gray-600 mb-3 lg:my-auto lg:mx-3" action="https://shop.ampdmarine.com/search">
                 <input class="search-form-input border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none" type="search" name="q" placeholder="Search">
                 <button type="submit" class="search-form-button absolute right-0 top-0 mt-5 mr-4">
                     <svg class="search-form-icon text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
@@ -152,7 +152,7 @@
                     </button>
             </form>
 
-            <div class="header-address text-center flex flex-col justify-center mb-3">
+            <div class="header-address text-center flex flex-col justify-center mb-3 lg:my-auto lg:text-right">
                 5685 E. Loop 281 South
                 <br />Longview, TX
                 <br />75602
