fix bug in mobile menu

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </header>
 
     <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
-        <div class="nav-links flex sm:flex-col lg:flex-row justify-center py-3">
+        <div class="nav-links flex flex-col lg:flex-row justify-center py-3">
             <a class="mx-12 sm:my-3" href="/" target="_blank" rel="noopener">
                 Home
             </a>
