fix mobile menu to disappear on small screens and a non clickable menu button in the wrong place and needs padding

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </header>
 
     <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
-        <div class="nav-links flex flex-col lg:flex-row justify-center py-3">
+        <div class="nav-links lg:flex flex flex-col lg:flex-row justify-center py-3 sm:hidden">
             <a class="mx-12 sm:my-3" href="/" target="_blank" rel="noopener">
                 Home
             </a>
@@ -177,6 +177,12 @@
             <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
                 Shop
             </a>
+        </div>
+
+        <div class="block lg:hidden">
+            <button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-grey border-grey-dark hover:text-white hover:border-white">
+				<svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+			</button>
         </div>
     </nav>
 
