--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
             </a>
         </div>
 
-        <div class="block lg:hidden">
-            <button id="nav-toggle" class="flex items-center px-3 py-2 border rounded text-grey border-grey-dark hover:text-white hover:border-white">
-				<svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+        <div class="flex justify-end lg:hidden">
+            <button id="nav-toggle" class="flex items-center m-3 px-3 py-3 border rounded text-yellow-700 border-grey-dark hover:text-white hover:border-yellow-700">
+				<svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
 			</button>
         </div>
     </nav>
