make menu icon thicker and more visible

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
         <div id="nav-toggle" class="flex justify-end lg:hidden">
             <button class="flex items-center m-3 px-3 py-3 border rounded text-yellow-700 border-grey-dark hover:text-white hover:border-yellow-700">
-				<svg class="fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+				<svg class="stroke-current fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
 			</button>
         </div>
         <div id="nav-links" class="nav-links lg:flex flex flex-col lg:flex-row justify-center py-3 sm:hidden">
