fix spacing on mobile menu so top and bottom space was even

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
                 Contact Us
             </a>
-            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
+            <a class="mx-12 sm:my-3 sm:mb-24 lg:mb-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
                 Shop
             </a>
         </div>
