--- a/index.html
+++ b/index.html
@@ -114,50 +114,52 @@
 
 <body class="">
     <!-- HTML5 -->
-    <header>
-        <section class="header-primary flex flex-col lg:flex-row">
-            <a class="link-home mx-auto" href="/">
-                <img src="images\logotransparent.png" class="header-logo" alt="Accurate Manufacturing and Product Development">
-            </a>
+    <header class="lg:px-48 sm:px-12 md:px-24">
+        <div>
+            <section class="header-primary flex flex-col lg:flex-row">
+                <a class="link-home mx-auto" href="/">
+                    <img src="images\logotransparent.png" class="header-logo" alt="Accurate Manufacturing and Product Development">
+                </a>
 
-            <ul class="social-icons list-none flex my-auto mt-3 justify-center lg:block lg:mx-3">
-                <li class="social-icon-facebook w-6 mx-3 lg:mb-1" id="social-icon-facebook">
-                    <a href="https://www.facebook.com/Accurate-Manufacturing-and-Product-Development-113122117248598"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></a>
-                </li>
-                <li class="social-icon-instagram w-6 mx-3 lg:mb-1" id="social-icon-instagram">
-                    <a href="#"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
-                </li>
-                <li class="social-icon-twitter w-6 mx-3" id="social-icon-twitter">
-                    <a href="#"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></a>
-                </li>
-            </ul>
+                <ul class="social-icons list-none flex my-auto mt-3 justify-center lg:block lg:mx-3">
+                    <li class="social-icon-facebook w-6 mx-3 lg:mb-1" id="social-icon-facebook">
+                        <a href="https://www.facebook.com/Accurate-Manufacturing-and-Product-Development-113122117248598"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></a>
+                    </li>
+                    <li class="social-icon-instagram w-6 mx-3 lg:mb-1" id="social-icon-instagram">
+                        <a href="#"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
+                    </li>
+                    <li class="social-icon-twitter w-6 mx-3" id="social-icon-twitter">
+                        <a href="#"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></a>
+                    </li>
+                </ul>
 
-            <ul class="telephone list-none flex flex-col justify-center text-center mt-2 mb-3 lg:my-auto lg:text-left">
-                <li class="telephone-question">Have a question?</li>
-                <li class="telephone-office"><a href="tel:+19037586171">(903) 758-6171</a></li>
-                <li class="telephone-cell"><a href="tel:+19037207404">(903) 720-7404</a></li>
-            </ul>
+                <ul class="telephone list-none flex flex-col justify-center text-center mt-2 mb-3 lg:my-auto lg:text-left">
+                    <li class="telephone-question">Have a question?</li>
+                    <li class="telephone-office"><a href="tel:+19037586171">(903) 758-6171</a></li>
+                    <li class="telephone-cell"><a href="tel:+19037207404">(903) 720-7404</a></li>
+                </ul>
 
-            <!-- This is an search component -->
-            <form class="search-form pt-2 relative mx-auto text-gray-600 mb-3 lg:my-auto lg:mx-3" action="https://shop.ampdmarine.com/search">
-                <input class="search-form-input border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none" type="search" name="q" placeholder="Search">
-                <button type="submit" class="search-form-button absolute right-0 top-0 mt-5 mr-4">
-                    <svg class="search-form-icon text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
-                        viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
-                        width="512px" height="512px">
-                        <path
-                        d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
-                    </svg>
-                    </button>
-            </form>
+                <!-- This is an search component -->
+                <form class="search-form pt-2 relative mx-auto text-gray-600 mb-3 lg:my-auto lg:mx-3" action="https://shop.ampdmarine.com/search">
+                    <input class="search-form-input border-2 border-gray-300 bg-white h-10 px-5 pr-16 rounded-lg text-sm focus:outline-none" type="search" name="q" placeholder="Search">
+                    <button type="submit" class="search-form-button absolute right-0 top-0 mt-5 mr-4">
+                        <svg class="search-form-icon text-gray-600 h-4 w-4 fill-current" xmlns="http://www.w3.org/2000/svg"
+                            xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px"
+                            viewBox="0 0 56.966 56.966" style="enable-background:new 0 0 56.966 56.966;" xml:space="preserve"
+                            width="512px" height="512px">
+                            <path
+                            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23  s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92  c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17  s-17-7.626-17-17S14.61,6,23.984,6z" />
+                        </svg>
+                        </button>
+                </form>
 
-            <div class="header-address text-center flex flex-col justify-center mb-3 lg:my-auto lg:text-right">
-                5685 E. Loop 281 South
-                <br />Longview, TX
-                <br />75602
-            </div>
-        </section>
+                <div class="header-address text-center flex flex-col justify-center mb-3 lg:my-auto lg:text-right">
+                    5685 E. Loop 281 South
+                    <br />Longview, TX
+                    <br />75602
+                </div>
+            </section>
+        </div>
     </header>
 
     <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
