--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </header>
 
     <nav class="main-nav header-border header-border-first w-full text-center uppercase text-lg">
-        <div id="nav-toggle" class="flex justify-end lg:hidden">
+        <div id="nav-toggle" class="absolute flex justify-end lg:hidden">
             <button class="flex items-center m-3 px-3 py-3 border rounded text-yellow-700 border-grey-dark hover:text-white hover:border-yellow-700">
 				<svg class="stroke-current fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
 			</button>
@@ -181,7 +181,7 @@
             <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
                 Contact Us
             </a>
-            <a class="mx-12 sm:my-3 sm:mb-24 lg:mb-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
+            <a class="mx-12 sm:my-3 lg:mb-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
                 Shop
             </a>
         </div>
