Remove cell phone number

--- a/index.html
+++ b/index.html
@@ -135,8 +135,9 @@
 
                 <ul class="telephone list-none flex flex-col justify-center text-center mt-2 mb-3 lg:my-auto lg:text-left">
                     <li class="telephone-question">Have a question?</li>
+                    <li>Call Now!</li>
                     <li class="telephone-office"><a href="tel:+19037586171">(903) 758-6171</a></li>
-                    <li class="telephone-cell"><a href="tel:+19037207404">(903) 720-7404</a></li>
+                    <!-- <li class="telephone-cell"><a href="tel:+19037207404">(903) 720-7404</a></li> -->
                 </ul>
 
                 <!-- This is an search component -->
