--- a/index.html
+++ b/index.html
@@ -169,20 +169,20 @@
 				<svg class="stroke-current fill-current h-5 w-5" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
 			</button>
         </div>
-        <div id="nav-links" class="nav-links lg:flex flex flex-col lg:flex-row justify-center py-3 sm:hidden">
-            <a class="mx-12 sm:my-3" href="/" target="_blank" rel="noopener">
+        <div id="nav-links" class="nav-links flex flex-col lg:flex-row justify-center py-3">
+            <a class="mx-12 my-3" href="/" target="_blank" rel="noopener">
                 Home
             </a>
-            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/about-us" target="_blank" rel="noopener">
+            <a class="mx-12 my-3" href="https://shop.ampdmarine.com/pages/about-us" target="_blank" rel="noopener">
                 About Us
             </a>
-            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/collections/all" target="_blank" rel="noopener">
+            <a class="mx-12 my-3" href="https://shop.ampdmarine.com/collections/all" target="_blank" rel="noopener">
                 Products
             </a>
-            <a class="mx-12 sm:my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
+            <a class="mx-12 my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
                 Contact Us
             </a>
-            <a class="mx-12 sm:my-3 lg:mb-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
+            <a class="mx-12 my-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
                 Shop
             </a>
         </div>
