Add brands to homepage and left some blank brands within the comment, please use multiple cursors in vscode to add a new brand by typing one time.

--- a/index.html
+++ b/index.html
@@ -204,6 +204,35 @@
         <li class="brand brand-skeeter md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/skeeter-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
         </li>
+        <li class="brand brand-basscat md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/basscat-accessories"><img src="images/logo-basscat.png" alt="Basscat"></a>
+        </li>
+        <li class="brand brand-phoenix md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/phoenix-accessories"><img src="images/logo-phoenix.png" alt="Phoenix"></a>
+        </li>
+        <li class="brand brand-vexus md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/vexus-accessories"><img src="images/logo-Vexus.png" alt="vexus"></a>
+        </li>
+        <!--
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        <li class="brand brand- md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
+        </li>
+        -->
     </ul>
 
     <a href="/"><img class="logo-glow" src="images/logotransparent.png" alt="Accurate Manufacturing and Product Development"></a>
