--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <a href="https://shop.ampdmarine.com/collections/phoenix-accessories"><img src="images/logo-phoenix.png" alt="Phoenix"></a>
         </li>
         <li class="brand brand-vexus md:mx-12 sm:my-12">
-            <a href="https://shop.ampdmarine.com/collections/vexus-accessories"><img src="images/logo-Vexus.png" alt="vexus"></a>
+            <a href="https://shop.ampdmarine.com/collections/vexus-accessories"><img src="images/logo-vexus.png" alt="Vexus"></a>
         </li>
         <!--
         <li class="brand brand- md:mx-12 sm:my-12">
