--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
         <li class="brand brand-skeeter md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/skeeter-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
         </li>
+    </ul>
+    <ul class="brands md:flex md:flex-row">
         <li class="brand brand-basscat md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/basscat-accessories"><img src="images/logo-basscat.png" alt="Basscat"></a>
         </li>
@@ -213,7 +215,8 @@
         <li class="brand brand-vexus md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/vexus-accessories"><img src="images/logo-vexus.png" alt="Vexus"></a>
         </li>
-        <!--
+    </ul>
+    <!--
         <li class="brand brand- md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
         </li>
