dealer locator link and css styling

--- a/index.html
+++ b/index.html
@@ -174,13 +174,16 @@
                 Home
             </a>
             <a class="mx-12 my-3" href="https://shop.ampdmarine.com/pages/about-us" target="_blank" rel="noopener">
-                About Us
+                About<span class="lg:hidden"> Us</span>
             </a>
             <a class="mx-12 my-3" href="https://shop.ampdmarine.com/collections/all" target="_blank" rel="noopener">
                 Products
             </a>
             <a class="mx-12 my-3" href="https://shop.ampdmarine.com/pages/contact-us" target="_blank" rel="noopener">
-                Contact Us
+                Contact<span class="lg:hidden"> Us</a>
+            </a>
+            <a class="mx-12 my-3 link-dealer" style="color:#e78200" href="https://shop.ampdmarine.com/apps/store-locator" target="_blank" rel="noopener">
+		Dealer<span class="sm:hidden md:hidden lg:inline">s</span><span class="lg:hidden"> Locator</span>
             </a>
             <a class="mx-12 my-3" href="https://shop.ampdmarine.com/" target="_blank" rel="noopener">
                 Shop
