instagram link, TODO: twitter link still needed

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <a href="https://www.facebook.com/Accurate-Manufacturing-and-Product-Development-113122117248598"><img src="images/icons/facebook.svg" alt="AMPDMarine on Facebook" /></a>
                     </li>
                     <li class="social-icon-instagram w-6 mx-3 lg:mb-1" id="social-icon-instagram">
-                        <a href="#"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
+                        <a href="//www.instagram.com/ampdmarine/"><img src="images/icons/instagram.svg" alt="AMPDMarine on Instagram" /></a>
                     </li>
                     <li class="social-icon-twitter w-6 mx-3" id="social-icon-twitter">
                         <a href="#"><img src="images/icons/twitter.svg" alt="AMPDMarine on Twitter" /></a>
