--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@
         <li class="brand brand-vexus md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/vexus-accessories"><img src="images/logo-vexus.png" alt="Vexus"></a>
         </li>
+        <li class="brand brand-triton md:mx-12 sm:my-12">
+            <a href="https://shop.ampdmarine.com/collections/triton-accessories"><img src="images/logo-triton.png" alt="Skeeter"></a>
+        </li>
     </ul>
     <!--
-        <li class="brand brand- md:mx-12 sm:my-12">
-            <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
-        </li>
         <li class="brand brand- md:mx-12 sm:my-12">
             <a href="https://shop.ampdmarine.com/collections/-accessories"><img src="images/logo-skeeter.png" alt="Skeeter"></a>
         </li>
